--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,3 +20,12 @@ li{
     list-style-type: none;
     
 }
+p{
+    color: green;
+    font-size: 34px;
+
+}
+.estilo1{
+    font-size: 20px;
+    color: blueviolet;
+}
