--- a/CSS/colores.css
+++ b/CSS/colores.css
@@ -1,9 +1,13 @@
+body{
+    background-color:seagreen
+    
+}
 .colores {
 color: tomato;
 background-color: yellow;
 margin: 100px 50px;
 text-align: center;
-
+border-radius: 15px;
 }
 .color1 {
     color: 001B79;
@@ -19,4 +23,32 @@ padding: 50px;
 .Q {
     background-color: chartreuse;
     display: block;
+}
+button{
+    background: darkgoldenrod;
+    color: blue;
+}
+.nav-inicio {
+    background: red;
+    padding: 25px;
+    display: flex;
+    text-decoration: none;
+    justify-content: space-around
+    
+}
+
+.columnas {
+    background: blue;
+    color: blanchedalmond;
+    padding: 15px;
+    width: 65%;
+    margin: 10px;
+    font-size: 25px;
+}
+.contenedor-padre {
+    display: flex;
+}
+.ETIQUETA {
+    background-color: rgba(216, 191, 216, 0.404);
+    
 }
